--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config webpack.config.js"
+    "dev": "webpack-dev-server --config webpack.config.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "@babel/preset-env": "^7.23.9",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "express": "^4.18.3",
     "file-loader": "^6.2.0",
     "hyperscript": "^2.0.2",
     "hyperscript-helpers": "^3.0.3",
